#include <string>

class Edge {
    int key;
    long int osmid;
    std::string name ;
    long int dest;
    bool oneWay;
    int maxSpeed;
};
