class Street {

};
