@startuml exemplo

class POI {
    name
    time_spent
}

class Category {

}

class Graph {

}

class Node {
    latitude
    longitude
}

class Edge {

}

class Street {
    name
    available
}

POI *-- "1" Node
POI -- "1..*" Category

Street *-- "1..*" Node

Graph *-- "1..*" Node

Node *-- "*" Edge

Edge *-- "1" Node : dest

@enduml